# SPmarine-core

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
include/: Server.h
include/adapters/: BargeController.h
include/domain/: BargeService.h  Barges.h
src/: CMakeLists.txt  Server.cpp  main.cpp  main.ts
src/adapters/: CMakeLists.txt
src/adapters/api/: BargeController.cpp
src/controllers/: BargeController.ts  CarrierController.ts  CustomerController.ts  OrderController.ts  StationController.ts  TugboatController.ts
src/domain/: CMakeLists.txt
src/domain/entities/: Barges.cpp
src/domain/services/: BargeService.cpp
src/dto/: BargeRequest.ts  Request.ts  Response.ts  TugboatRequest.ts
src/entities/: Barge.ts  BaseEntity.ts  Carrier.ts  Customer.ts  Order.ts  Station.ts  Tugboat.ts
src/interfaces/: BargeRepository.ts  BargeService.ts  Repository.ts  Service.ts  TugboatRepository.ts  TugboatService.ts
src/modules/: AppModule.ts  BargeModule.ts  CarrierModule.ts  CustomerModule.ts  DatabaseModule.ts  OrderModule.ts  StationModule.ts  TugboatModule.ts
src/ports/: CMakeLists.txt
src/repositories/: BargeRepositoryImpl.ts  CarrierRepositoryImpl.ts  CustomerRepositoryImpl.ts  OrderRepositoryImpl.ts  StationRepositoryImpl.ts  TugboatRepositoryImpl.ts
src/services/: BargeServiceImpl.ts  CarrierServiceImpl.ts  CustomerServiceImpl.ts  OrderServiceImpl.ts  StationServiceImpl.ts  TugboatServiceImpl.ts
src/types/: index.ts
tests/: database.spec.ts
tests/mock/: barge.ts
tests/services/: barge_service.spec.ts  order_service.spec.ts
